# Conformer

./: .gitignore  LICENSE.md  README.md  app.py  dataset.py  decoder.py  engine.py  evaluate.py  gradio_demo.py  greedy_evaluate.py  load_checkpoint.py  model.py  pyproject.toml  requirements.txt  torchscript.py  train.py  utils.py
Conformer/: __init__.py  conv_block.py  encoder.py
backend/: README.md  config.py  main.py  state.py
backend/routes/: stream.py  transcribe.py
backend/services/: decoder.py  engine.py  mel_transform.py
backend/utils/: helper.py
conformer/: asr_trainer.py  builders.py  config.py  model.py  train.py
conformer/data/: dataloader.py  dataset.py
conformer/export/: torchscript.py
conformer/models/: attention.py  conv_subsample.py  decoder.py  feed_forward.py
conformer/scripts/: common_voice.py  helper.py  merge_jsons.py  mimic_record.py
conformer/utils/: logging.py  text_transform.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: animated-shader-background.tsx  audio-visualizer.tsx  button.tsx  dotted-surface.tsx
notebooks/: Conformer_Inference_With_CTC_Decoder.ipynb
src/Conformer/: __init__.py  model.py
src/Conformer/neuralnet/: dataloader.py  dataset.py  model.py  torchscript.py  train.py  utils.py
src/Conformer/neuralnet/models/: attention.py  encoding.py
src/scripts/: mimic_record.py
static/: script.js  styles.css
tests/: model_test.py  test_model.py  test_text_transform.py  utility_test.py
