[project]
name = "conformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comet-ml>=3.58.0",
    "flashlight-text>=0.0.7",
    "librosa>=0.11.0",
    "lightning>=2.6.5",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "sox>=1.5.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
]
